unpackaged/main/default/objects/API_Connector__Credit_Check_Setting__mdt/API_Connector__Credit_Check_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Credit Check Setting</label>
    <pluralLabel>Credit Check Settings</pluralLabel>
</CustomObject>